--- a/example/conf/app.conf
+++ b/example/conf/app.conf
@@ -1,12 +1,12 @@
-appname = beego social auth example
+appname = social auth example
 httpport = 8092
 runmode = dev
 
 ; orm setting
-orm_source = root:root@/social_test?loc=Asia%2FShanghai
+orm_source = root:@/test
 
 ; website url for auth redirect
-social_auth_url = http://127.0.0.1:8092/
+social_auth_url = http://localhost:8000/
 
 ; your client_id and secret
 github_client_id =
